Clean the DAO and Service Layer.